verkovich/examples/semantic_errors/err_type_mismatch.mcl
# Тест: неявное сужающее приведение
# Ошибка: Type mismatch: cannot assign FLOAT to INT.
int? a = 5.5

# Тест: присваивание несовместимых типов
vector? v = {1, 2}
# Ошибка: Type mismatch: cannot assign VECTOR to INT.
int? b = v